fix: fix wire connection sync bug